--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,8 @@
 */
 
 .page {
+  font-family: var(--main-font, sans-serif);
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  font-variation-settings: "wdth" var(--font-weight_global);
 }
