--- a/styles/style.css
+++ b/styles/style.css
@@ -19,4 +19,6 @@
   min-inline-size: 320px;
   min-block-size: 100dvb;
   font-variation-settings: "wdth" var(--font-weight_global);
+  color: var(--text-color, rgba(0, 0, 0, 1));
+  background-color: var(--background-color, rgba(255, 255, 255, 1));
 }
