--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,26 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
+:root.theme-light {
+  --font-weight_global: 400;
+  --font-weight_header: 700;
+  --text-color: rgba(0, 0, 0, 1);
+  --background-color: rgba(255, 255, 255, 1);
+}
+
+:root.theme-dark {
+  --font-weight_global: 465;
+  --font-weight_header: 785;
+  --text-color: rgba(0, 204, 20, 1);
+  --background-color: rgba(0, 0, 0, 1);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --font-weight_global: 465;
+    --font-weight_header: 785;
+    --text-color: rgba(0, 204, 20, 1);
+    --background-color: rgba(0, 0, 0, 1);
+  }
+}
