--- a/styles/style.css
+++ b/styles/style.css
@@ -15,10 +15,13 @@
 */
 
 .page {
+  color: var(--text-color, rgba(0, 0, 0, 1));
   font-family: var(--main-font, sans-serif);
+  background-color: var(--background-color, rgba(255, 255, 255, 1));
+  background-image: var(--background-image);
+  background-size: cover;
+  background-attachment: fixed;
   min-inline-size: 320px;
   min-block-size: 100dvb;
   font-variation-settings: "wdth" var(--font-weight_global);
-  color: var(--text-color, rgba(0, 0, 0, 1));
-  background-color: var(--background-color, rgba(255, 255, 255, 1));
 }
