--- a/styles/themes.css
+++ b/styles/themes.css
@@ -10,6 +10,13 @@
   --font-weight_header: 700;
   --text-color: rgba(0, 0, 0, 1);
   --background-color: rgba(255, 255, 255, 1);
+  --background-image: repeating-linear-gradient(
+      to right,
+      #d3d3d3 0 2px,
+      transparent 2px 4px
+    ),
+    repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
+    linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
 }
 
 :root.theme-dark {
@@ -17,6 +24,13 @@
   --font-weight_header: 785;
   --text-color: rgba(0, 204, 20, 1);
   --background-color: rgba(0, 0, 0, 1);
+  --background-image: repeating-linear-gradient(
+      to right,
+      #000 0 2px,
+      transparent 2px 4px
+    ),
+    repeating-linear-gradient(to bottom, #000 0 2px, transparent 2px 4px),
+    linear-gradient(to bottom, #007f0c 0.01%, #004306);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -25,5 +39,12 @@
     --font-weight_header: 785;
     --text-color: rgba(0, 204, 20, 1);
     --background-color: rgba(0, 0, 0, 1);
+    --background-image: repeating-linear-gradient(
+        to right,
+        #000 0 2px,
+        transparent 2px 4px
+      ),
+      repeating-linear-gradient(to bottom, #000 0 2px, transparent 2px 4px),
+      linear-gradient(to bottom, #007f0c 0.01%, #004306);
   }
 }
