--- a/styles/variables.css
+++ b/styles/variables.css
@@ -10,4 +10,12 @@
 
   --text-color: rgba(0, 0, 0, 1);
   --background-color: rgba(255, 255, 255, 1);
+
+  --background-image: repeating-linear-gradient(
+      to right,
+      #d3d3d3 0 2px,
+      transparent 2px 4px
+    ),
+    repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
+    linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
 }
