--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,6 +24,7 @@ ol,
 li {
   margin: 0;
   padding: 0;
+  font-weight: normal;
 }
 
 a {
@@ -35,6 +36,8 @@ input {
   color: currentColor;
   font-family: inherit;
   font-size: inherit;
+  cursor: pointer;
+  appearance: none;
 }
 
 ul,
