--- a/styles/style.css
+++ b/styles/style.css
@@ -51,7 +51,7 @@
   min-height: 323px;
 }
 
-.header_logo {
+.header__logo {
   margin-block-start: clamp(7.5rem, 7.1479rem + 1.5023vw, 8.5rem);
   font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
 }
