--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,7 @@
   background-color: var(--background-color, rgba(255, 255, 255, 1));
 }
 
-/* ------------------------------------------------------- */
+/* ------------------------------------------------------------- */
 
 .header {
   align-items: center;
@@ -76,7 +76,56 @@
   background: transparent;
   font-size: 14px;
 }
-/* ------------------------------------------------------ */
+
+/* ------------------------------------------------------------- */
+
+/* ------------------------------------------------------------- */
+
+/* ------------------------ фильтры ---------------------------- */
+.filter_sepia {
+  filter: sepia(60%);
+}
+
+.filter_blur {
+  filter: blur(2px);
+}
+
+.filter_grayscale {
+  filter: grayscale(1);
+}
+
+.filter_invert {
+  filter: invert(1);
+}
+
+.filter_saturate {
+  filter: saturate(160%);
+}
+
+.filter_brightness {
+  filter: brightness(200%);
+}
+
+.filter_contrast {
+  filter: contrast(170%);
+}
+
+.filter_mishmash {
+  filter: saturate(150%) brightness(150%) contrast(150%) blur(3px);
+}
+/* ------------------------------------------------------------- */
+
+/* ----------------------- состояния --------------------------- */
+
+/*L */
+
+/*H */
+
+/*A */
+
+/* ------------------------------------------------------------- */
+
+/* ------------------------------------------------------------- */
 /*
 @media (width <= 375px) {
   :root {
