--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,7 +1,7 @@
 :root {
   /*шрифты*/
 
-  --main-font: "Inter";
+  --main-font: "Inter Variable";
   --accent-font: "PressStart2P";
   --font-weight_global: 400;
   --font-weight_header: 700;
