--- a/styles/style.css
+++ b/styles/style.css
@@ -34,6 +34,7 @@
 .block {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   width: clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem);
   border: 2px solid var(--text-color, rgba(0, 0, 0, 1));
   background-color: var(--background-color, rgba(255, 255, 255, 1));
@@ -64,9 +65,10 @@
 .theme-menu__list {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   gap: 10px;
-  margin: 25px 0;
+  margin: 22px 0;
+  padding-inline-start: 20px;
 }
 
 .theme-menu__button {
@@ -75,6 +77,20 @@
   font-size: 14px;
   text-transform: uppercase;
   background: transparent;
+}
+
+/* ====== */
+.theme-menu__button:disabled {
+  opacity: 0.6;
+  pointer-events: none;
+}
+
+.theme-menu__button:disabled::before {
+  content: "▶";
+  position: absolute;
+  bottom: 2px;
+  left: -16px;
+  animation: swing 0.5s ease-in-out infinite alternate;
 }
 
 /* ------------------------------------------------------------- */
@@ -185,7 +201,7 @@
 
 /*A */
 
-/* ------------------------------------------------------------- */
+/* ----------------------- состояния --------------------------- */
 
 /* ------------------------------------------------------------- */
 /*
