--- a/styles/style.css
+++ b/styles/style.css
@@ -88,9 +88,11 @@
 .theme-menu__button:disabled::before {
   content: "▶";
   position: absolute;
+  inline-size: 14px;
+  block-size: 14px;
   bottom: 2px;
   left: -16px;
-  animation: swing 0.5s ease-in-out infinite alternate;
+  animation: swing 0.6s ease-in-out infinite alternate;
 }
 
 /* ------------------------------------------------------------- */
