--- a/styles/style.css
+++ b/styles/style.css
@@ -189,8 +189,10 @@
 }
 
 .card__icon-button {
-  border: none;
+  border: 2px solid transparent;
   background-color: transparent;
+  transition: border 0.3s ease;
+  min-block-size: 38px;
 }
 
 .card__like-button {
@@ -199,6 +201,7 @@
   min-inline-size: 130px;
   min-block-size: 38px;
   background-color: transparent;
+  transition: box-shadow 0.3s ease;
 }
 
 .button__text {
@@ -268,14 +271,29 @@
 
 /*--- Hover --- */
 
-/* --- Focus --- */
 .theme-menu__button:hover,
 .theme-menu__button:focus,
 .theme-menu__button:focus-visible {
-  outline: none;
   opacity: 0.6;
 }
 
+/* --- Focus --- */
+
+.theme-menu__button:focus,
+.theme-menu__button:focus-visible,
+.card__icon-button:focus,
+.card__icon-button:focus-visible,
+.card__like-button:focus,
+.card__like-button:focus-visible {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  border-color: var(--text-color, rgba(0, 0, 0, 1));
+}
+.card__like-button:focus-visible {
+  box-shadow: 2px 2px 0 var(--text-color, rgba(0, 0, 0, 1));
+}
 /* --- Active --- */
 
 /* ----------------------- состояния --------------------------- */
