--- a/styles/style.css
+++ b/styles/style.css
@@ -193,6 +193,7 @@
   background-color: transparent;
   transition: border 0.3s ease;
   min-block-size: 38px;
+  margin-inline-end: 5px;
 }
 
 .card__like-button {
@@ -214,7 +215,16 @@
 }
 
 .footer__button {
+  display: flex;
   width: clamp(19.125rem, 18.4868rem + 2.723vw, 20.9375rem);
+  min-height: 51px;
+  font-family: var(--accent-font, sans-serif);
+  line-height: 21.6px;
+  font-size: 14px;
+  transition: box-shadow 0.3s ease;
+  align-items: center;
+  justify-content: center;
+  gap: 7px;
 }
 
 .footer__button_text {
@@ -284,7 +294,9 @@
 .card__icon-button:focus,
 .card__icon-button:focus-visible,
 .card__like-button:focus,
-.card__like-button:focus-visible {
+.card__like-button:focus-visible,
+.footer__button:focus,
+.footer__button:focus-visible {
   outline: none;
 }
 
@@ -294,15 +306,18 @@
 .card__like-button:focus-visible {
   box-shadow: 2px 2px 0 var(--text-color, rgba(0, 0, 0, 1));
 }
+
+.footer__button:focus-visible {
+  box-shadow: 2px 2px 0 var(--text-color, rgba(0, 0, 0, 1));
+}
+
 /* --- Active --- */
 
-/* ----------------------- состояния --------------------------- */
-
 /* ------------------------------------------------------------- */
-/*
-@media (width <= 375px) {
-  :root {
 
+@media (max-width: 376px) {
+  .footer__button {
+    min-height: 80px;
+    flex-direction: column;
   }
 }
-*/
