--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,7 @@
   font-variation-settings: "wght" var(--font-weight_global, 400);
 }
 
-/* ===== общие стили и выравнивание для *всех* блоков ===== */
+/* === общие стили и выравнивание для *всех* блоков === */
 
 .block {
   display: flex;
@@ -38,6 +38,22 @@
   width: clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem);
   border: 2px solid var(--text-color, rgba(0, 0, 0, 1));
   background-color: var(--background-color, rgba(255, 255, 255, 1));
+}
+
+/* === общие стили и выравнивание для кнопок like и save === */
+
+.button_global-style {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 7px;
+  line-height: 12.6px;
+  font-size: 14px;
+  color: var(--text-color, rgba(0, 0, 0, 1));
+  border: 2px solid var(--text-color, rgba(0, 0, 0, 1));
+  font-family: var(--accent-font, sans-serif);
+  background-color: var(--background-color, rgba(255, 255, 255, 1));
+  transition: box-shadow 0.3s ease;
 }
 
 /* ------------------------------------------------------------- */
@@ -102,12 +118,12 @@
 .theme-menu__button::after {
   content: "";
   display: block;
+  width: 100%;
+  height: 2px;
   background-color: var(--text-color, rgba(0, 0, 0, 1));
   transition: transform 0.3s ease;
   transform: scaleX(0);
   transform-origin: left;
-  height: 2px;
-  width: 100%;
 }
 
 .theme-menu__button:focus-visible::after {
@@ -182,27 +198,23 @@
 /* ============ */
 
 .content-card__button {
-  align-self: flex-end;
-  padding: 0 25px 25px 0;
   display: flex;
   align-items: center;
+  align-self: flex-end;
+  padding: 0 25px 25px 0;
 }
 
 .card__icon-button {
+  margin-inline-end: 5px;
   border: 2px solid transparent;
   background-color: transparent;
   transition: border 0.3s ease;
   min-block-size: 38px;
-  margin-inline-end: 5px;
 }
 
 .card__like-button {
-  font-family: var(--accent-font, sans-serif);
-  border: 2px solid var(--text-color, rgba(0, 0, 0, 1));
   min-inline-size: 130px;
   min-block-size: 38px;
-  background-color: transparent;
-  transition: box-shadow 0.3s ease;
 }
 
 .button__text {
@@ -215,18 +227,8 @@
 }
 
 .footer__button {
-  display: flex;
   width: clamp(19.125rem, 18.4868rem + 2.723vw, 20.9375rem);
-  min-height: 51px;
-  font-family: var(--accent-font, sans-serif);
-  color: var(--text-color, rgba(0, 0, 0, 1));
-  background-color: var(--background-color, rgba(255, 255, 255, 1));
-  line-height: 21.6px;
-  font-size: 14px;
-  transition: box-shadow 0.3s ease;
-  align-items: center;
-  justify-content: center;
-  gap: 7px;
+  min-block-size: 51px;
 }
 
 .footer__button_text {
@@ -295,21 +297,15 @@
 .theme-menu__button:focus-visible,
 .card__icon-button:focus,
 .card__icon-button:focus-visible,
-.card__like-button:focus,
-.card__like-button:focus-visible,
-.footer__button:focus,
-.footer__button:focus-visible {
+.button_global-style:focus,
+.button_global-style:focus-visible {
   outline: none;
 }
 
 .card__icon-button:focus-visible {
   border-color: var(--text-color, rgba(0, 0, 0, 1));
 }
-.card__like-button:focus-visible {
-  box-shadow: 2px 2px 0 var(--text-color, rgba(0, 0, 0, 1));
-}
-
-.footer__button:focus-visible {
+.button_global-style:focus-visible {
   box-shadow: 2px 2px 0 var(--text-color, rgba(0, 0, 0, 1));
 }
 
@@ -319,7 +315,7 @@
 
 @media (max-width: 376px) {
   .footer__button {
-    min-height: 80px;
     flex-direction: column;
+    min-height: 80px;
   }
 }
