--- a/styles/style.css
+++ b/styles/style.css
@@ -62,7 +62,7 @@
 .button_global-style::before {
   content: "";
   position: absolute;
-  /*inset:0*/
+  /*inset:0;*/
   background-color: var(--text-color, rgba(0, 0, 0, 1));
   transition: transform 0.5s ease-in-out;
   transform: scaleX(0);
@@ -233,6 +233,8 @@
 }
 
 .button__text {
+  mix-blend-mode: difference;
+  color: var(--button-text_hover-color, rgba(255, 255, 255, 1));
 }
 
 /* ------------------------------------------------------------- */
@@ -261,6 +263,9 @@
 .popup_window__button-text {
 }
 
+.floppy-icon {
+  mix-blend-mode: difference;
+}
 /* ------------------------ фильтры ---------------------------- */
 .filter_sepia {
   filter: sepia(45%);
