--- a/styles/themes.css
+++ b/styles/themes.css
@@ -10,6 +10,7 @@
   --font-weight_header: 700;
   --text-color: rgba(0, 0, 0, 1);
   --background-color: rgba(255, 255, 255, 1);
+  --button-text_hover-color: rgba(255, 255, 255, 1);
   --background-image: repeating-linear-gradient(
       to right,
       #d3d3d3 0 2px,
@@ -24,6 +25,7 @@
   --font-weight_header: 785;
   --text-color: rgba(0, 204, 20, 1);
   --background-color: rgba(0, 0, 0, 1);
+  --button-text_hover-color: rgba(0, 204, 20, 1);
   --background-image: repeating-linear-gradient(
       to right,
       #000 0 2px,
@@ -39,6 +41,7 @@
     --font-weight_header: 785;
     --text-color: rgba(0, 204, 20, 1);
     --background-color: rgba(0, 0, 0, 1);
+    --button-text_hover-color: rgba(0, 204, 20, 1);
     --background-image: repeating-linear-gradient(
         to right,
         #000 0 2px,
