--- a/styles/variables.css
+++ b/styles/variables.css
@@ -11,6 +11,8 @@
   --text-color: rgba(0, 0, 0, 1);
   --background-color: rgba(255, 255, 255, 1);
 
+  --button-text_hover-color: rgba(255, 255, 255, 1);
+
   --background-image: repeating-linear-gradient(
       to right,
       #d3d3d3 0 2px,
