--- a/styles/style.css
+++ b/styles/style.css
@@ -239,7 +239,13 @@
   min-block-size: 38px;
 }
 
-/* ------------------------------------------------------------- */
+/* ------------------- SVG Heart ------------------- */
+
+.sparks {
+  opacity: 0;
+}
+
+/* ------------------------------------------------ */
 
 .save-dialog {
   margin-block-end: 105px;
