--- a/styles/themes.css
+++ b/styles/themes.css
@@ -11,6 +11,7 @@
   --text-color: rgba(0, 0, 0, 1);
   --background-color: rgba(255, 255, 255, 1);
   --button-text_hover-color: rgba(255, 255, 255, 1);
+  --heart-fill_color: rgba(255, 0, 0, 1);
   --background-image: repeating-linear-gradient(
       to right,
       #d3d3d3 0 2px,
@@ -26,6 +27,7 @@
   --text-color: rgba(0, 204, 20, 1);
   --background-color: rgba(0, 0, 0, 1);
   --button-text_hover-color: rgba(0, 204, 20, 1);
+  --heart-fill_color: rgba(255, 0, 0, 1);
   --background-image: repeating-linear-gradient(
       to right,
       #000 0 2px,
@@ -42,6 +44,7 @@
     --text-color: rgba(0, 204, 20, 1);
     --background-color: rgba(0, 0, 0, 1);
     --button-text_hover-color: rgba(0, 204, 20, 1);
+    --heart-fill_color: rgba(255, 0, 0, 1);
     --background-image: repeating-linear-gradient(
         to right,
         #000 0 2px,
