--- a/styles/animations.css
+++ b/styles/animations.css
@@ -24,7 +24,7 @@
   }
 }
 
-/* ---------------- heart ----------------- */
+/* ===================  HEART  ====================*/
 
 .heart {
   transform-origin: center;
@@ -33,13 +33,13 @@
 /* LVHA  ---- H  --- */
 
 .like-icon .core {
-  transition: fill 0.3s linear 0.03s;
   fill: var(--background-color, rgba(255, 255, 255, 1));
+  transition: fill 0.3s linear 0.03s;
 }
 
 .like-icon .main-body {
-  transition: fill 0.3s linear;
   fill: var(--background-color, rgba(255, 255, 255, 1));
+  transition: fill 0.3s linear;
 }
 
 .like-icon:hover .core {
@@ -53,3 +53,16 @@
 }
 
 /* LVHA  --- A --- */
+
+.like-icon:active .core {
+  fill: var(--heart-fill_color, rgba(255, 0, 0, 1));
+  transition: fill 0.3s linear;
+}
+
+.like-icon:active .main-body {
+  fill: var(--heart-fill_color, rgba(255, 0, 0, 1));
+  transition: fill 0.3s linear 0.05s;
+}
+
+/* --- clicked --- */
+
