--- a/styles/animations.css
+++ b/styles/animations.css
@@ -66,3 +66,17 @@
 
 /* --- clicked --- */
 
+.like-icon.is-liked .core {
+  fill: var(--heart-fill_color, rgba(255, 0, 0, 1));
+  transition: fill 0.3s linear;
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--heart-fill_color, rgba(255, 0, 0, 1));
+  transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--heart-fill_color, rgba(255, 0, 0, 1));
+  transition: fill 0.3s linear 0.06s;
+}
