--- a/styles/style.css
+++ b/styles/style.css
@@ -130,7 +130,7 @@
   position: absolute;
   bottom: 2px;
   left: -16px;
-  animation: swing 0.5s ease-in-out infinite alternate;
+  animation: header_arrow-swing 0.5s ease-in-out infinite alternate;
   inline-size: 14px;
   block-size: 14px;
 }
