--- a/styles/style.css
+++ b/styles/style.css
@@ -29,18 +29,19 @@
   font-variation-settings: "wght" var(--font-weight_global, 400);
 }
 
-/* === общие стили и выравнивание для *всех* блоков === */
+/* ==================== общие стили ====================*/
 
+/* ---------- выравнивание для *всех* блоков ---------- */
 .block {
   display: flex;
   flex-direction: column;
   width: clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem);
+  margin-block-end: 50px;
   border: 2px solid var(--text-color, rgba(0, 0, 0, 1));
   background-color: var(--background-color, rgba(255, 255, 255, 1));
 }
 
-/* === общие стили и выравнивание для кнопок like и save === */
-
+/* ------- выравнивание для кнопок like и save ------- */
 .button_global-style {
   position: relative;
   display: flex;
@@ -56,12 +57,10 @@
   transition: box-shadow 0.3s ease;
 }
 
-/*=== заливка кнопок - для общего класса кнопок === */
-
+/* ---------------- заливка кнопок ---------------- */
 .button_global-style::before {
   content: "";
   position: absolute;
-  /*inset:0;*/
   background-color: var(--text-color, rgba(0, 0, 0, 1));
   transition: transform 0.5s ease-in-out;
   transform: scaleX(0);
@@ -70,22 +69,24 @@
   block-size: 100%;
 }
 
-/*=== инверсия текста для всех кнопок === */
-
+/* ---------- инверсия текста для кнопок ---------- */
 .button__text {
   color: var(--button-text_hover-color, rgba(255, 255, 255, 1));
   mix-blend-mode: difference;
 }
 
-/* ------------------------------------------------------------- */
+/* ==============================================================*/
 
+/* -------------------------- header -------------------------- */
+
+/* ------ лэйаут и выравнивание ------ */
 .header {
   align-items: center;
-  min-block-size: 323px;
-  max-block-size: 368px;
   margin: 100px 0;
   font-family: var(--accent-font, sans-serif);
   text-transform: uppercase;
+  min-block-size: 323px;
+  max-block-size: 368px;
 }
 
 .header__logo {
@@ -115,8 +116,7 @@
   transition: opacity 0.3s ease;
 }
 
-/* ============ */
-
+/* --- активный элемент и стрелочка --- */
 .theme-menu__button:disabled {
   opacity: 0.6;
   pointer-events: none;
@@ -132,57 +132,46 @@
   block-size: 14px;
 }
 
-/* ========== */
-
+/* ----- подчеркивание в фокусе ----- */
 .theme-menu__button::after {
   content: "";
   display: block;
-  width: 100%;
-  height: 2px;
   background-color: var(--text-color, rgba(0, 0, 0, 1));
   transition: transform 0.3s ease;
   transform: scaleX(0);
   transform-origin: left;
+  inline-size: 100%;
+  block-size: 2px;
 }
 
 .theme-menu__button:focus-visible::after {
   transform: scaleX(1);
 }
-/* ===========*/
 
-/* ------------------------------------------------------------- */
-.article {
-  margin-block-end: 50px;
-}
+/* -------------------------- main -------------------------- */
 
+/*  заголовок  */
 .content-card__title {
   padding: 5px 10px;
   line-height: 21px;
   font-variation-settings: "wght" var(--font-weight_header, 700);
 }
 
-.content-card__text {
-  display: flex;
-  flex-direction: column;
-  gap: 27px;
-  padding: 25px;
-  line-height: 21px;
-}
-
-.picture {
-  display: block;
-  width: 100%;
-  height: 100%;
-  /*max-height: 696px;*/
-  object-fit: cover;
-  object-position: center;
-}
-
-.content-card__picture {
+/*  картинка */
+.content-card__picture-container {
   position: relative;
   border-width: 2px 0;
   border-style: solid;
   border-color: var(--text-color, rgba(0, 0, 0, 1));
+}
+
+.content-card__picture {
+  display: block;
+  object-fit: cover;
+  object-position: center;
+  overflow: hidden;
+  inline-size: 100%;
+  block-size: 100%;
 }
 
 .content-card__picture_label {
@@ -213,9 +202,17 @@
   }
 }
 
-/* ============ */
+/*  текст */
+.content-card__text {
+  display: flex;
+  flex-direction: column;
+  gap: 27px;
+  padding: 25px;
+  line-height: 21px;
+}
 
-.content-card__button {
+/*  кнопка */
+.content-card__button-container {
   display: flex;
   align-items: center;
   align-self: flex-end;
@@ -235,18 +232,12 @@
   min-block-size: 38px;
 }
 
-/* ------------------- SVG Heart ------------------- */
-
-.sparks {
-  opacity: 0;
-}
-
-/* ------------------------------------------------ */
+/* ----------------------- footer-кнопка save ----------------------- */
 
 .save-dialog__button {
   width: clamp(19.125rem, 18.4868rem + 2.723vw, 20.9375rem);
-  min-block-size: 51px;
   margin-block-end: 105px;
+  min-block-size: 51px;
 }
 
 .floppy-icon {
@@ -257,46 +248,47 @@
 
 /*  ------------- Pop-Up window ------------ */
 
-.popup_window {
+.popup_window_container {
   width: clamp(21.3125rem, 20.9604rem + 1.5023vw, 22.3125rem);
   padding: 31px;
   color: var(--text-color, rgba(0, 0, 0, 1));
   background-color: var(--background-color, rgba(255, 255, 255, 1));
 }
 
-.popup_window::backdrop {
+.popup_window_container::backdrop {
   background-color: rgba(0, 0, 0, 0.75);
 }
 
-.popup_window_content {
+.popup_window__content_container {
   display: flex;
   align-items: center;
   gap: 20px;
 }
 
-.popup_floppy-icon {
-  mix-blend-mode: difference;
+.popup_window__floppy-icon {
   flex-shrink: 0;
+  mix-blend-mode: difference;
   max-inline-size: 39px;
   max-block-size: 39px;
 }
 
-.popup_window_title {
+.popup_window__title {
   font-family: var(--accent-font, sans-serif);
   font-size: 14px;
   line-height: 21px;
   text-transform: uppercase;
-  /* max-inline-size: 234px;
-  max-block-size: 195px;*/
 }
 
-.popup-button {
-  min-width: 100%;
+.popup_window__button {
   margin-block-start: 30px;
   padding: 9px;
+  min-inline-size: 100%;
 }
 
-/* ------------------------ фильтры ---------------------------- */
+/* ==============================================================*/
+/* ==============================================================*/
+
+/* ----- фильтры ----- */
 .filter_sepia {
   filter: sepia(45%);
 }
@@ -329,12 +321,9 @@
   filter: saturate(150%) brightness(150%) contrast(150%) blur(3px);
 }
 
-/* ------------------------------------------------------------- */
+/* ----- состояния ----- */
 
-/* ----------------------- состояния --------------------------- */
-
-/* LVHA  ---- H  --- */
-
+/* H */
 .theme-menu__button:hover,
 .theme-menu__button:focus,
 .theme-menu__button:focus-visible {
@@ -345,8 +334,7 @@
   transform: scaleX(1);
 }
 
-/* LVHA --- Focus --- */
-
+/* F */
 .theme-menu__button:focus,
 .theme-menu__button:focus-visible,
 .card__icon-button:focus,
@@ -359,15 +347,7 @@
 .card__icon-button:focus-visible {
   border-color: var(--text-color, rgba(0, 0, 0, 1));
 }
+
 .button_global-style:focus-visible {
   box-shadow: 2px 2px 0 var(--text-color, rgba(0, 0, 0, 1));
-}
-
-/* ------------------------------------------------------------- */
-
-@media (max-width: 376px) {
-  .footer__button {
-    flex-direction: column;
-    min-height: 80px;
-  }
 }
