--- a/styles/style.css
+++ b/styles/style.css
@@ -223,7 +223,7 @@
   margin-inline-end: 2px; /*для красоты, чтобы в фокусе бордер не сливался с кнопкой*/
   border: 2px solid transparent;
   background-color: transparent;
-  transition: border 0.3s ease;
+  transition: border-color 0.3s ease;
   max-block-size: 38px;
 }
 
@@ -266,7 +266,6 @@
 }
 
 .popup_window__floppy-icon {
-  flex-shrink: 0;
   mix-blend-mode: difference;
   max-inline-size: 39px;
   max-block-size: 39px;
@@ -288,7 +287,7 @@
 /* ==============================================================*/
 /* ==============================================================*/
 
-/* ----- фильтры ----- */
+/* ------------------- фильтры ------------------- */
 .filter_sepia {
   filter: sepia(45%);
 }
@@ -321,7 +320,7 @@
   filter: saturate(150%) brightness(150%) contrast(150%) blur(3px);
 }
 
-/* ----- состояния ----- */
+/* ------------------- состояния ------------------- */
 
 /* H */
 .theme-menu__button:hover,
@@ -348,6 +347,7 @@
   border-color: var(--text-color, rgba(0, 0, 0, 1));
 }
 
+.button_global-style:focus,
 .button_global-style:focus-visible {
   box-shadow: 2px 2px 0 var(--text-color, rgba(0, 0, 0, 1));
 }
