--- a/styles/media.css
+++ b/styles/media.css
@@ -1,7 +1,12 @@
 /**/
 @media (max-width: 376px) {
-  .footer__button {
+  .save-dialog__button {
     flex-direction: column;
     min-block-size: 80px;
+  }
+
+  .floppy-icon {
+    max-inline-size: 28px;
+    max-block-size: 28px;
   }
 }
