--- a/styles/media.css
+++ b/styles/media.css
@@ -1,5 +1,5 @@
 /**/
-@media (max-width: 376px) {
+@media (width <=376px) {
   .save-dialog__button {
     flex-direction: column;
     min-block-size: 80px;
@@ -8,5 +8,10 @@
   .floppy-icon {
     max-inline-size: 28px;
     max-block-size: 28px;
+  }
+
+  .content-card__picture {
+    max-inline-size: 371px;
+    max-block-size: 371px;
   }
 }
