--- a/styles/style.css
+++ b/styles/style.css
@@ -57,6 +57,7 @@
 .button_global-style::before {
   content: "";
   position: absolute;
+  inset: 0;
   background-color: var(--text-color, rgba(0, 0, 0, 1));
   transition: transform 0.5s ease-in-out;
   transform: scaleX(0);
@@ -68,8 +69,8 @@
 /* ---------- инверсия текста для кнопок ---------- */
 .button__text {
   color: var(--button-text_hover-color, rgba(255, 255, 255, 1));
-  mix-blend-mode: difference;
   font-size: 14px;
+  mix-blend-mode: difference;
 }
 
 /* ==============================================================*/
@@ -212,7 +213,7 @@
 .content-card__button-container {
   display: flex;
   align-self: flex-end;
-  padding: 0 25px 25px 0;
+  padding: 0 25px 17px 0;
 }
 
 .card__icon-button {
@@ -350,4 +351,65 @@
 .button_global-style:focus,
 .button_global-style:focus-visible {
   box-shadow: 2px 2px 0 var(--text-color, rgba(0, 0, 0, 1));
+}
+
+/* ===============================================================================*/
+/* ===============================================================================*/
+/* ===============================================================================*/
+
+html {
+  scroll-behavior: smooth;
+}
+
+.back-to-top_button {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  display: none;
+  padding: 5px 5px;
+  text-decoration: none;
+}
+
+.back-to-top_button_text {
+  font-size: 10px;
+}
+
+.back-to-top_link-container {
+  margin: 0 17px 10px auto;
+}
+
+.back-to-top_link {
+  border: 2px solid transparent;
+  padding: 5px;
+  font-family: var(--accent-font, fantasy);
+  font-size: 10px;
+  text-decoration: none;
+  text-transform: lowercase;
+  transition: opacity 0.3s ease, border-color 0.3s ease;
+}
+
+.uparrow_button {
+  letter-spacing: 3px;
+}
+
+.uparrow_link {
+  font-weight: 700;
+  letter-spacing: 5px;
+}
+
+.back-to-top_link:focus {
+  outline: none;
+}
+
+.back-to-top_link:hover {
+  opacity: 0.6;
+}
+
+.back-to-top_link:hover :focus-visible {
+  border-color: var(--text-color, rgba(0, 0, 0, 1));
+}
+
+.back-to-top_link:focus-visible {
+  border-color: var(--text-color, rgba(0, 0, 0, 1));
+  outline: none;
 }
