--- a/styles/media.css
+++ b/styles/media.css
@@ -15,12 +15,11 @@
   }
 }
 
-/* =========================================== */
-/* =========================================== */
-/* =========================================== */
+/* ======================== ADDITIONAL FUNCTIONALITY ============================= */
+/* =============================================================================== */
 
 @media (width >= 768px) {
-  .back-to-top_link-container {
+  .back-to-top_link_container {
     display: none;
   }
 
