--- a/styles/style.css
+++ b/styles/style.css
@@ -220,7 +220,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-inline-end: 2px; /*для красоты, чтобы в фокусе бордер не сливался с кнопкой*/
+  margin-inline-end: 3px; /*для красоты, чтобы в фокусе бордер не сливался с кнопкой*/
   border: 2px solid transparent;
   background-color: transparent;
   transition: border-color 0.3s ease;
@@ -363,11 +363,12 @@ html {
 /* ----- навигация внутри блока при wv < 768 --- */
 
 .back-to-top_link_container {
-  margin: 0 17px 10px auto;
+  margin: 0 25px 10px auto;
   /*контейнер в разметке исключительно для семантики*/
 }
 
 .back-to-top_link {
+  display: block;
   border: 2px solid transparent;
   padding: 5px;
   font-family: var(--accent-font, fantasy);
@@ -375,11 +376,6 @@ html {
   text-decoration: none;
   text-transform: lowercase;
   transition: opacity 0.3s ease, border-color 0.3s ease;
-}
-
-.back-to-top_link_text {
-  font-weight: 700;
-  letter-spacing: 5px;
 }
 
 .back-to-top_link:hover {
@@ -409,13 +405,16 @@ html {
   padding: 5px 5px;
 }
 
-.button_back-to-top .button__text {
+/* --------------- стрелочка  --------------- */
+
+.back-to-top-arrow {
+  display: flex;
+  align-items: center;
+  gap: 4px;
   font-size: 10px;
 }
 
-.button_back-to-top .button__text:after {
+.back-to-top-arrow:after {
   content: "▲";
-  display: inline-block;
-  margin-inline-start: 2px;
   animation: totop_arrow-swing 0.5s ease-in-out infinite alternate;
 }
